# OpenEngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_rpi.sh  build_web.sh  convert_shaders.py  rpi-toolchain.cmake
.github/workflows/: deploy-pages.yml
assets/levels/: demolevel.json
assets/shaders/: pbr.fs  pbr.vs  postprocess.fs  postprocess.vs  shadow.fs  shadow.vs  sky.fs  sky.vs  sprite_mask.fs
assets/shaders/es100/: pbr.fs  pbr.vs  postprocess.fs  postprocess.vs  shadow.fs  shadow.vs  sky.fs  sky.vs  sprite_mask.fs  sprite_mask.vs
assets/shaders/gl330/: pbr.fs  pbr.vs  postprocess.fs  postprocess.vs  shadow.vs  sky.fs  sprite_mask.fs  sprite_mask.vs
projects/VS2022/: dungeons.sln
projects/VS2022/dungeons/: dungeons.vcxproj
projects/scripts/: build.bat
src/: Info.plist  engine_config.h  main.cpp  minshell.html  shader_utils.h
src/audio/: audio_system.h
src/core/: collision.cpp  collision.h  ecs.h  entity.h  game_state.h  level.cpp  level.h  resource_manager.h  types.h
src/input/: input_handler.cpp  input_handler.h
src/player/: player_controller.cpp  player_controller.h
src/rendering/: hot_reload_shader.h  postprocess.cpp  postprocess.h  renderer.h  shadow_system.cpp  shadow_system.h  world.cpp  world.h
src/rendering/HUD/: hud.cpp  hud.h
src/rendering/materials/: billboard_presets.h  billboard_system.cpp  billboard_system.h  material_instance.h  materials.h
